# tax_helper

./: .gitignore  Makefile  README.md  config.py  desktop_app.spec  desktop_main.py  k1_chopper.py  main.py  pdf_redactor.py  pyproject.toml  requirements.txt
app/: __init__.py  desktop_app.py
app/core/: __init__.py  models.py  patterns.py  redaction_engine.py  tin.py
app/services/: __init__.py  app_settings.py  file_service.py  folder_scan_service.py  redaction_workflow.py
app/ui/: __init__.py  batch_progress_dialog.py  batch_result_panel.py  main_window.py  progress_dialog.py  result_panel.py  review_panel.py  upload_panel.py  workers.py
docs/superpowers/plans/: 2026-03-22-batch-folder-redaction.md
docs/superpowers/specs/: 2026-03-22-batch-folder-redaction-design.md
packaging/macos/: build_dmg.sh
packaging/scripts/: generate_icon.py
packaging/windows/: tax_pdf_redactor.iss
tests/: __init__.py  test_batch_models.py  test_batch_worker.py  test_folder_scan_service.py  test_redaction_workflow.py
