[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tax-pdf-redactor"
version = "0.1.0"
description = "Local-first PDF redaction for tax and other sensitive documents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyMuPDF==1.26.7",
    "PySide6>=6.8,<7",
]

[project.optional-dependencies]
build = [
    "Pillow>=11,<12",
    "PyInstaller>=6.11,<7",
]
dev = [
    "ruff>=0.8",
]

[project.scripts]
tax-helper-cli = "main:main"
tax-helper-desktop = "desktop_main:main"

[tool.setuptools]
py-modules = ["main", "desktop_main", "config", "pdf_redactor"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# use single quotes for strings (unlike Black which uses double quotes)
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
